[gd_scene load_steps=7 format=3 uid="uid://dyglmwvr5dl6y"]

[ext_resource type="Script" path="res://scripts/screens.gd" id="1_l2d8b"]
[ext_resource type="Texture2D" uid="uid://dssu8bnhgfkwk" path="res://assets/textures/ui/gear.png" id="2_kxds3"]
[ext_resource type="PackedScene" uid="uid://biuf4pkrkfnuw" path="res://scenes/title_screen.tscn" id="3_mhq6q"]
[ext_resource type="PackedScene" uid="uid://bfjeqf8i7h7eh" path="res://scenes/pause_screen.tscn" id="4_l1lk2"]
[ext_resource type="PackedScene" uid="uid://ua7uxjk63cfa" path="res://scenes/shop_screen.tscn" id="5_76diy"]
[ext_resource type="PackedScene" uid="uid://bxsbba4tlrevh" path="res://scenes/game_over_screen.tscn" id="5_82s5d"]

[node name="Screens" type="CanvasLayer"]
process_mode = 3
layer = 101
script = ExtResource("1_l2d8b")

[node name="TitleScreen" parent="." instance=ExtResource("3_mhq6q")]

[node name="PauseScreen" parent="." instance=ExtResource("4_l1lk2")]

[node name="GameOverScreen" parent="." instance=ExtResource("5_82s5d")]

[node name="ShopScreen" parent="." instance=ExtResource("5_76diy")]

[node name="Debug" type="Control" parent="."]
z_index = 4000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBG" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="Label" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 11.0
offset_right = 255.0
offset_bottom = 37.0
grow_horizontal = 2
text = "Build 0.1.0"

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 65.0
offset_right = -18.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="Toggleconsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -45.0
offset_right = 45.0
grow_vertical = 0
texture_normal = ExtResource("2_kxds3")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Debug/Toggleconsole" to="." method="_on_toggleconsole_pressed"]
